objects/Trigger_Activity_Check__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Name__c</fullName>
        <label>Trigger Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Activity Check</label>
</CustomObject>